--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -3,14 +3,19 @@
 <br />
 
 
-<p><%= @profile.user.email %></p>
-<p><%= @profile.first_name %></p>
-<p><%= @profile.last_name %></p>
-<p><%= @profile.address1 %></p>
-<p><%= @profile.address2 %></p>
-<p><%= @profile.city %></p>
-<p><%= @profile.state %></p>
-<p><%= @profile.zipcode %></p>
-<p><%= @profile.phone %></p>
-
-<%= link_to "Edit", edit_profile_path(@profile) %>
+<% if @profile %>
+  <p><%= @profile.user.email %></p>
+  <p><%= @profile.first_name %></p>
+  <p><%= @profile.last_name %></p>
+  <p><%= @profile.address1 %></p>
+  <p><%= @profile.address2 %></p>
+  <p><%= @profile.city %></p>
+  <p><%= @profile.state %></p>
+  <p><%= @profile.zipcode %></p>
+  <p><%= @profile.phone %></p>
+  <% else %>
+  <p>Please edit your profile</p>
+  <%= link_to "Edit", edit_profile_path(current_user.id) %>
+  <% end %>
+<br />
+<br />
