--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,24 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
     <%= javascript_pack_tag 'app.js' %>
   </head>
 
   <body>
+    <!-- start navigation here -->
+    <nav>
+      <% if user_signed_in? %>
+        <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+        <%= link_to "Profile", profile_path(current_user) %>
+        <%= link_to "Family Info", family_path(current_user) %>
+        <%= link_to "Membership Info", membership_info_path(current_user) %>
+      <% else %>
+        <%= link_to "Sign in", new_user_session_path %>
+        <%= link_to "Sign Up", new_user_registration_path %>
+      <% end %>
+
+    </nav>
     <%= yield %>
   </body>
 </html>
