--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,19 @@
  *
  *= require_tree .
  *= require_self
+ //= require semantic-ui
  */
+
+ @import "semantic-ui";
+ body {
+   background-color: #DADADA;
+ }
+ body > .grid {
+   height: 100%;
+ }
+ .image {
+   margin-top: -100px;
+ }
+ .column {
+   max-width: 450px;
+ }
