--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -13,9 +13,10 @@
   <p><%= @profile.state %></p>
   <p><%= @profile.zipcode %></p>
   <p><%= @profile.phone %></p>
-  <% else %>
+  <%= link_to "Edit", edit_profile_path(current_user.id) %>
+<% else %>
   <p>Please edit your profile</p>
   <%= link_to "Edit", edit_profile_path(current_user.id) %>
-  <% end %>
+<% end %>
 <br />
 <br />
